<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/select_all"
        app:showAsAction="never"
        android:title="@string/select_all" />

    <item
        android:id="@+id/remove_selections"
        app:showAsAction="never"
        android:title="@string/remove_selections" />

    <item
        android:id="@+id/refresh"
        app:showAsAction="never"
        android:title="@string/refresh_playlists" />


</menu>