<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/selection_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="0dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Select playlists" />

    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/playlist_selection_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0"
            tools:listitem="@layout/selectable_playlist" />

    </android.support.v4.widget.SwipeRefreshLayout>


    <Button
        android:id="@+id/selection_next_button"
        android:layout_width="100dp"
        android:layout_height="56dp"
        android:enabled="false"
        android:text="Next" />

</LinearLayout>
