<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="16dp">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/playlist_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4.5dp" />
    </FrameLayout>

    <include layout="@layout/playlist_row" />
</LinearLayout>